deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpuup-deployment
  labels:
    app: cpuup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpuup
  template:
    metadata:
      labels:
        app: cpuup
    spec:
      containers:
      - name: cpuup
        image: docker-registry-default.apps.paosin.local/autoscaler/cpuup:v1.3
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
---
kind: Service
apiVersion: v1
metadata:
  name: cpuup-service
spec:
  selector:
    app: cpuup
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cpuup-service
  namespace: autoscaler
spec:
  host: cpuup-service-autoscaler.apps.paosin.local
  to:
    kind: Service
    name: cpuup-service
    weight: 100
  wildcardPolicy: None
